--- a/Introduccion.html
+++ b/Introduccion.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="css/style5.css">
+    <link rel="stylesheet" href="style5.css">
 
     <link rel="stylesheet" type="text/css" href="css/menu.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
@@ -39,7 +39,7 @@
                 <li><a href="simbologia.html">
                         &nbsp;Simbología
                     </a></li>
-                <li><a href="#">
+                <li><a href="https://ccge-boadicea.github.io/pedigreejs/docs/example7.html">
                         &nbsp;Completar el &nbsp;heredograma
                     </a></li>
                 <li><a href="Introduccion.html">
