--- a/simbologia.html
+++ b/simbologia.html
@@ -48,7 +48,7 @@
                 <li><a href="#">
                         &nbsp;Ejemplos
                     </a></li>
-                <li><a href="#">
+                <li><a href="http://www.inen.sld.pe/portal/documentos/pdf/normas_legales/NUEVA_Resoluciones_Jefaturales/2014/20032014_INTRO.pdf" target="_blank">
                         &nbsp;Bibliografía</a>
                 </li>
             </ul>
