--- a/simbologia.html
+++ b/simbologia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Collapsible sidebar using Bootstrap 4</title>
+    <title>Simbología</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -28,8 +28,8 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar" style="
              background-color: #343a40;
-             min-width: 270px;
-             max-width: 270px;">
+             min-width: 240px;
+             max-width: 240px;">
             <div class="sidebar-header">
                 <h3>HEREDROGRAMA VIRTUAL</h3>
             </div>
@@ -39,23 +39,23 @@
                 <li><a href="simbologia.html">
                         &nbsp;Simbología
                     </a></li>
-                <li><a href="https://ccge-boadicea.github.io/pedigreejs/docs/example7.html">
-                        &nbsp;Completar el &nbsp;heredograma
+                <li><a href="heredograma.html">
+                        &nbsp;Arma tu heredograma
                     </a></li>
                 <li><a href="Introduccion.html">
                     &nbsp;Introducción
                 </a></li>
-                <li><a href="#">
-                        &nbsp;Ejemplos
+                <li><a href="ejercicios.html">
+                        &nbsp;Ejercicios 
                     </a></li>
-                <li><a href="http://www.inen.sld.pe/portal/documentos/pdf/normas_legales/NUEVA_Resoluciones_Jefaturales/2014/20032014_INTRO.pdf" target="_blank">
-                        &nbsp;Bibliografía</a>
+                <li><a href="informacion.html">
+                        &nbsp;Links para más información</a>
                 </li>
             </ul>
             <br/><br/>
             <h3>&nbsp;&nbsp;Integrantes</h3>
             
-            <p>&nbsp;&nbsp;&nbsp;
+            <p style="color: white;">&nbsp;&nbsp;&nbsp;
                 Diana Caizapasto
                 <br/>&nbsp;&nbsp;&nbsp;
                 Alisson Calero<br/>
@@ -83,57 +83,36 @@
             </div>
             <div class="rela-block content-container">
                 <h2>Simbología</h2>
-                <h3>Genealogía</h3>
-                <p>Símbolos más usados.</p>
+                <h3>Genealogía, símbolos más usados.</h3>
+                <p style="color: blanchedalmond; "></p>
                 <!-- Simbolos -->
                 <div class="rela-block tab-container">
                     <div class="rela-inline tab">
                         <div class="abs-center">
                             <img src="images/masculino.png">
                             <p></p>
-                            <p class="light">Masculino</p>
+                            <p class="light">Hombre</p>
                         </div>  
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
                             <img src="images/femenino.png">
                             <p></p>
-                            <p class="light">Femenino</p>
+                            <p class="light">Mujer</p>
                         </div>
                     </div> 
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/fallecido.png">
+                            <img src="images/union.png" style="height: 40px;">
                             <p></p>
-                            <p class="light">Fallecido</p>
+                            <p class="light">Unión legítima hombre y mujer</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/generoDesc.png">
+                            <img src="images/unionIleg.png" style="height: 50px;">
                             <p></p>
-                            <p class="light">Género desconocido</p>
-                        </div>
-                    </div>
-                    <div class="rela-inline tab">
-                        <div class="abs-center">
-                            <img src="images/abortoEsp.png">
-                            <p></p>
-                            <p class="light">Aborto espontáneo</p>
-                        </div>
-                    </div>
-                    <div class="rela-inline tab">
-                        <div class="abs-center">
-                            <img src="images/propositoProb.png">
-                            <p></p>
-                            <p class="light">Propósito o probando</p>
-                        </div>
-                    </div>
-                    <div class="rela-inline tab">
-                        <div class="abs-center">
-                            <img src="images/union.png">
-                            <p></p>
-                            <p class="light">Unión</p>
+                            <p class="light">Unión ilegítima hombre y mujer</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
@@ -145,44 +124,65 @@
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/portadorMas.png">
+                            <img src="images/divorciados.png">
                             <p></p>
-                            <p class="light">Portador masculino</p>
+                            <p class="light">Divorciados</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/portadorFem.png">
+                            <img src="images/hombreMujerMuerto.png">
                             <p></p>
-                            <p class="light">Portador femenino</p>
+                            <p class="light">Hombre o mujer muerto(a)</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/masculinoAfec.png">
+                            <img src="images/hombreMujerPort.png">
                             <p></p>
-                            <p class="light">Masculino afectado</p>
+                            <p class="light">Hombre o mujer portador(a)</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/femeninoAfec.png">
+                            <img src="images/enfermedadAuto.png">
                             <p></p>
-                            <p class="light">Femenino afectado</p>
+                            <p class="light">Enfermedad autosómica dominante</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/unionIleg.png">
+                            <img src="images/enfermedadCX.png">
                             <p></p>
-                            <p class="light">Unión ilegítima</p>
+                            <p class="light">Enfermedad ligada al cromosoma X</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/padresHermanos.png">
+                            <img src="images/propositum.png">
                             <p></p>
-                            <p class="light">Padres e hijos</p>
+                            <p class="light">Propositum</p>
+                        </div>
+                    </div>
+                    <div class="rela-inline tab">
+                        <div class="abs-center">
+                            <img src="images/matrimonioSinHijos.png">
+                            <p></p>
+                            <p class="light">Sin hijos o sin descendientes</p>
+                        </div>
+                    </div>
+                    <div class="rela-inline tab">
+                        <div class="abs-center">
+                            <img src="images/gemelosMon.png">
+                            <p></p>
+                            <p class="light">Gemelos idénticos o monocigóticos</p>
+                        </div>
+                    </div>
+                    <div class="rela-inline tab">
+                        <div class="abs-center">
+                            <img src="images/gemelosDic.png">
+                            <p></p>
+                            <p class="light">Gemelos dicigóticos</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
@@ -194,39 +194,25 @@
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/hijoAdop.png">
+                            <img src="images/adopcion.png">
                             <p></p>
-                            <p class="light">Hijo adoptado</p>
+                            <p class="light">Adopción</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/hijaAdop.png">
+                            <img src="images/generoDesc.png">
                             <p></p>
-                            <p class="light">Hija adoptada</p>
+                            <p class="light">Sexo desconocido</p>
                         </div>
                     </div>
                     <div class="rela-inline tab">
                         <div class="abs-center">
-                            <img src="images/matrimonioSinHijos.png">
+                            <img src="images/abortoEsp.png">
                             <p></p>
-                            <p class="light">Matrimonio sin hijos</p>
+                            <p class="light">Aborto</p>
                         </div>
-                    </div>
-                    <div class="rela-inline tab">
-                        <div class="abs-center">
-                            <img src="images/gemelosMon.png">
-                            <p></p>
-                            <p class="light">Gemelos Monocigóticos</p>
-                        </div>
-                    </div>
-                    <div class="rela-inline tab">
-                        <div class="abs-center">
-                            <img src="images/gemelosDic.png">
-                            <p></p>
-                            <p class="light">Gemelos dicigóticos</p>
-                        </div>
-                    </div>
+                    </div>                    
                 </div>
             </div>
         </div>
