--- a/heredograma.html
+++ b/heredograma.html
@@ -106,7 +106,7 @@
 	</script>
 </head>
 <body>
-
+	<iframe src="https://gamejolt.com/games/mafiaparadox/597314" frameborder="0" scrolling="no" width="400" height="635" allowfullscreen></iframe>
 <div class="text-center">
 	<h2>Example 7</h2>
 	<label class="btn">
