--- a/Introduccion.html
+++ b/Introduccion.html
@@ -107,8 +107,13 @@
                         <img src="images/herenciaAutosomica.png" title="HERENCIA AUTOSÓMICA DOMINANTE">
                     </div>    
                     <h3 style="color: black;
-                            text-align: justify;">PATOLOGÍAS FRECUENTES</h3>
-                    <img src="images/sindromeMarfan.png" class="derecha">
+                            text-align: justify;
+                            float: left;">PATOLOGÍAS FRECUENTES
+                    </h3><br><br>
+                    <div class="marfan">
+                        <img src="images/sindromeMarfan.png">
+                        
+                    </div>                    
                     <UL>
                         <LI><p  style="color: black;">Acondroplasia.</p>
                         <LI><p  style="color: black;">S. de Marfan. </p>
@@ -153,10 +158,6 @@
                         <img src="images/herenciaAutosomicaRecesiva3.jpg" class="derecha">
                         <img src="images/herenciaAutosomicaRecesiva4.jpg" class="izquierda" width="284px" height="227px">
                     </div>
-                    <p>br;</p>   <p>br;</p>
-                    <p>br;</p>   <p>br;</p>
-                    <p>br;</p>   <p>br;</p>
-
                 </div>
                 <div class="tab long">                        
                     <!-- 3Div -->        
