--- a/ejercicios.html
+++ b/ejercicios.html
@@ -137,7 +137,8 @@
             <div style="text-align: center;">
                 <BR>  
                 <form>
-                    <label class="font" style="width: 120px;">F1:</label>      
+                    <label class="espacio font" style="
+                    margin-right: 20px;">F1:</label>      
                     <input class="ejer" type="text" id="R1FA">                      
                     <input class="ejer" type="text" id="R1FB"><BR>                
                     <input class="ejer" type="text" id="R1FC">                
@@ -219,7 +220,8 @@
             <div style="text-align: center;">
                 <BR>  
                 <form>
-                    <label class="font" style="width: 120px;">F1:</label>      
+                    <label class="espacio font" style="
+                    margin-right: 20px;">F1:</label>       
                     <input class="ejer" type="text" id="R2FA">                      
                     <input class="ejer" type="text" id="R2FB"><BR>                
                     <input class="ejer" type="text" id="R2FC">                
@@ -266,7 +268,7 @@
         <!-- 3er ejercicio -->
         <div class="tab long">
             <h3 style="color: black;">HERENCIA AUTOSÓMICA RECESIVA</h3>
-            <p>Para el carácter “color de ojos”, el alelo azul se pasa de manera recesiva, comparado con el alelo negro.</p>
+            <p>Para el carácter “color de ojos”, el alelo azul se hereda de manera recesiva, comparado con el alelo negro.</p>
             <div>
                 <form>
                     <hr>
@@ -306,7 +308,8 @@
             <div style="text-align: center;">
                 <BR>  
                 <form>
-                    <label class="font" style="width: 120px;">F1:</label>      
+                    <label class="espacio font" style="
+                    margin-right: 20px;">F1:</label>       
                     <input class="ejer" type="text" id="R3FA">                      
                     <input class="ejer" type="text" id="R3FB"><BR>                
                     <input class="ejer" type="text" id="R3FC">                
@@ -322,7 +325,7 @@
                 <form>                           
                     <label>Fenotipo:</label>
                     <select id="R3C">
-                    <option value="eje1RA">¼ de los hijos  tendrán ojos azules y 50% de los hijos tendrán ojos negros.</option>
+                    <option value="eje1RA">¼ de los hijos  tendrán ojos azules y 75% de los hijos tendrán ojos negros.</option>
                     <option value="eje1RB">100% tendrán ojos negros.</option>
                     <option value="eje1RC">2/4 de los hijos tendrán ojos negros y 2/4 ojos azules.</option>
                     <option value="eje1RC">50% hijas serán portadoras y 50% de los hijos serán portadores.</option>
@@ -372,7 +375,8 @@
             <div style="text-align: center;">
                 <BR>  
                 <form>
-                    <label class="font" style="width: 120px;">F1:</label>      
+                    <label class="espacio font" style="
+                    margin-right: 20px;">F1:</label>      
                     <input class="ejer" type="text" id="R3FA2">                      
                     <input class="ejer" type="text" id="R3FB2"><BR>                
                     <input class="ejer" type="text" id="R3FC2">                
@@ -453,7 +457,8 @@
             <div style="text-align: center;">
                 <BR>  
                 <form>
-                    <label class="font" style="width: 120px;">F1:</label>      
+                    <label class="espacio font" style="
+                    margin-right: 20px;">F1:</label>       
                     <input class="ejer" type="text" id="R4FA">                      
                     <input class="ejer" type="text" id="R4FB"><BR>                
                     <input class="ejer" type="text" id="R4FC">                
