--- a/simbologia.html
+++ b/simbologia.html
@@ -87,128 +87,128 @@
                 <p style="color: blanchedalmond; "></p>
                 <!-- Simbolos -->
                 <div class="rela-block tab-container">
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/masculino.png">
+                            <img src="images/masculino.png" class="pic">
                             <p></p>
                             <p class="light">Hombre</p>
                         </div>  
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/femenino.png">
+                            <img src="images/femenino.png" class="pic">
                             <p></p>
                             <p class="light">Mujer</p>
                         </div>
                     </div> 
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/union.png" style="height: 40px;">
+                            <img src="images/union.png" style="height: 40px;" class="pic">
                             <p></p>
                             <p class="light">Unión legítima hombre y mujer</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/unionIleg.png" style="height: 50px;">
+                            <img src="images/unionIleg.png" style="height: 50px;" class="pic">
                             <p></p>
                             <p class="light">Unión ilegítima hombre y mujer</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/consanguinidad.png">
+                            <img src="images/consanguinidad.png" class="pic">
                             <p></p>
                             <p class="light">Consanguinidad</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/divorciados.png">
+                            <img src="images/divorciados.png" class="pic">
                             <p></p>
                             <p class="light">Divorciados</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/hombreMujerMuerto.png">
+                            <img src="images/hombreMujerMuerto.png" class="pic">
                             <p></p>
                             <p class="light">Hombre o mujer muerto(a)</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/hombreMujerPort.png">
+                            <img src="images/hombreMujerPort.png" class="pic">
                             <p></p>
                             <p class="light">Hombre o mujer portador(a)</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/enfermedadAuto.png">
+                            <img src="images/enfermedadAuto.png" class="pic">
                             <p></p>
                             <p class="light">Enfermedad autosómica dominante</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/enfermedadCX.png">
+                            <img src="images/enfermedadCX.png" class="pic">
                             <p></p>
                             <p class="light">Enfermedad ligada al cromosoma X</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/propositum.png">
+                            <img src="images/propositum.png" class="pic">
                             <p></p>
                             <p class="light">Propositum</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/matrimonioSinHijos.png">
+                            <img src="images/matrimonioSinHijos.png" class="pic">
                             <p></p>
                             <p class="light">Sin hijos o sin descendientes</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/gemelosMon.png">
+                            <img src="images/gemelosMon.png" class="pic">
                             <p></p>
                             <p class="light">Gemelos idénticos o monocigóticos</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/gemelosDic.png">
+                            <img src="images/gemelosDic.png" class="pic">
                             <p></p>
                             <p class="light">Gemelos dicigóticos</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/embarazo.png">
+                            <img src="images/embarazo.png" class="pic">
                             <p></p>
                             <p class="light">Embarazo</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/adopcion.png">
+                            <img src="images/adopcion.png" class="pic">
                             <p></p>
                             <p class="light">Adopción</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/generoDesc.png">
+                            <img src="images/generoDesc.png" class="pic">
                             <p></p>
                             <p class="light">Sexo desconocido</p>
                         </div>
                     </div>
-                    <div class="rela-inline tab">
+                    <div class="rela-inline tabla">
                         <div class="abs-center">
-                            <img src="images/abortoEsp.png">
+                            <img src="images/abortoEsp.png" class="pic">
                             <p></p>
                             <p class="light">Aborto</p>
                         </div>
