--- a/simbologia.html
+++ b/simbologia.html
@@ -23,13 +23,22 @@
 </head>
 
 <body>
-
-    <div class="wrapper">
+    <div  class="portada" id="porta">
+        <img src="images/portada.png" class="port">
+        <br>
+        <button onclick="empezar()" class="port">¡EMPEZAR!</button>
+        <script>
+            function  empezar(){
+                document.getElementById("porta").remove();
+            }
+        </script>
+    </div>
+    <div class="wrapper" style="z-index: 0;position:absolute; ">
         <!-- Sidebar Holder -->
         <nav id="sidebar" style="
-             background-color: #343a40;
-             min-width: 240px;
-             max-width: 240px;">
+            background-color: #343a40;
+            min-width: 240px;
+            max-width: 240px;">
             <div class="sidebar-header">
                 <h3>HEREDROGRAMA VIRTUAL</h3>
             </div>
@@ -216,8 +225,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
+    </div>  
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
