--- a/simbologia.html
+++ b/simbologia.html
@@ -24,7 +24,7 @@
 
 <body>
     <div  class="portada" id="porta">
-        <img src="images/masculino.png" class="port">
+        <img src="images/portada.png" class="port">
         <br>
         <button onclick="empezar()" class="port">¡EMPEZAR!</button>
         <script>
